content/docs/3.0/1-getting-started/index.mdx
---
posttype: "docs"
title: Getting started
metaTitle: "Getting started"
metaDescription: "metaDescription"
---

#### Introduction

In this guide, we're going to build a very simple React App, which will make use of ReactGrid.

#### Initialize a React App with ReactGrid

Let's create the basis for our App first:
```shell
npx create-react-app reactgrid-getting-started --typescript
cd reactgrid-getting-started
```

The only thing that's missing from our project now is ReactGrid itself.
To add it to the dependencies, simply run:
```shell
npm install @silevis/reactgrid
```

or install from local tarball archive (placed where `package.json` is located)

```shell
npm install reactgrid-latest.tgz
```

####  Integrate ReactGrid into the App

Once ReactGrid is installed and ready, we can import it in the following way:
```tsx
// App.js
import React, { useState } from "react";
import { ReactGrid } from "@silevis/reactgrid";
import "@silevis/reactgrid/styles.css";
```

#### Define some data to display in the grid

Although we were able to create an empty ReactGrid, it arguably wouldn't make much sense.
So let's define some data first, and then feed it into ReactGrid for display.
We're going to need two arrays. One for [`columns`](/docs/3.0/7-api/0-interfaces/3-column/), and the other for [`rows`](/docs/3.0/7-api/0-interfaces/2-row/).
Don't worry about all of the properties of column and row objects now -
we'll cover them later on. 

```tsx
const columns = [
  { columnId: "Name", width: 100 },
  { columnId: "Surname", width: 100 }
];

const rows = [
  {
    rowId: 0,
    cells: [
      { type: "header", text: "Name" },
      { type: "header", text: "Surname" },
    ],
  },
  {
    rowId: 1,
    cells: [
      { type: "text", text: "Thomas" },
      { type: "text", text: "Goldman" },
    ],
  },
  {
    rowId: 2,
    cells: [
      { type: "text", text: "Susie" },
      { type: "text", text: "Spencer" },
    ],
  },
  {
    rowId: 3,
    cells: [
      { type: "text", text: "" },
      { type: "text", text: "" },
    ],
  }
];
```

#### Pass the data to ReactGrid

We've got everything we need to see ReactGrid in action.
It's finally time to use the ReactGrid component we imported earlier, and give it the data
we defined in the previous step. This is easy, and can be done like that:

``` tsx
<ReactGrid
  rows={rows}
  columns={columns}
/>
```

#### Introduce state

The data we've defined so far is static. There's nothing wrong with that
for the tutorial purposes, but in a real application you'll probably want
to be able to handle dynamic data updates.
Let's wrap our rows and columns inside the `useState` hook, so that we can easily update them
in the future:

```jsx
function App() {
  const [state, setState] = useState(() => ({
    columns: [
      { columnId: "Name", width: 100 },
      { columnId: "Surname", width: 100 },
    ],
    rows: [
      {
        rowId: 0,
        cells: [
          { type: "header", text: "Name" },
          { type: "header", text: "Surname" },
        ],
      },
      {
        rowId: 1,
        cells: [
          { type: "text", text: "Thomas" },
          { type: "text", text: "Goldman" },
        ],
      },
      {
        rowId: 2,
        cells: [
          { type: "text", text: "Susie" },
          { type: "text", text: "Spencer" },
        ],
      },
      {
        rowId: 3,
        cells: [
          { type: "text", text: "" },
          { type: "text", text: "" },
        ],
      },
    ],
  }));
  // [...]
}

```

#### Putting it all together

After having followed this guide, your `App.js` file should look more or less like this:
```jsx
import React, { useState } from 'react';
import { ReactGrid } from "@silevis/reactgrid";
import "@silevis/reactgrid/styles.css";

function App() {
  const [state, setState] = useState(() => ({
    columns: [
      { columnId: "Name", width: 100 },
      { columnId: "Surname", width: 100 },
    ],
    rows: [
      {
        rowId: 0,
        cells: [
          { type: "header", text: "Name" },
          { type: "header", text: "Surname" },
        ],
      },
      {
        rowId: 1,
        cells: [
          { type: "text", text: "Thomas" },
          { type: "text", text: "Goldman" },
        ],
      },
      {
        rowId: 2,
        cells: [
          { type: "text", text: "Susie" },
          { type: "text", text: "Spencer" },
        ],
      },
      {
        rowId: 3,
        cells: [
          { type: "text", text: "" },
          { type: "text", text: "" },
        ],
      },
    ],
  }));

  return (
    <ReactGrid
      rows={state.rows}
      columns={state.columns}
    />
  );
}

export default App;
```

You can now start the App locally with:
```shell
npm start
```
Or simply play around with the interactive demo below:

<iframe
  src="https://codesandbox.io/embed/reactgrid-getting-started-0754c?autoresize=1&fontsize=14&hidenavigation=1&theme=dark"
  style="width:100%; height:400px; border:0; border-radius: 4px; overflow:hidden;"
  title="reactgrid-getting-started"
  allow="accelerometer; ambient-light-sensor; camera; encrypted-media; geolocation; gyroscope; hid; microphone; midi; payment; usb; vr; xr-spatial-tracking"
  sandbox="allow-forms allow-modals allow-popups allow-presentation allow-same-origin allow-scripts"
></iframe>

#### Summary
You should now have a basic understanding of what ReactGrid is and how it can be used.
Continue to the next page for more advanced usage examples.
